# routes/index.router.ts
@@ -12,6 +12,9 @@ router.get("/", async (req, res, next) => {
 	}
 	res.status(404).send();
 });
+router.get("/health", async (req, res, next) => {
+	res.status(200).send("OK");
+});
 router.get("/timeline", requireAuthentication, indexController.timeline);
 router.get("/activity/{:period}", requireAuthentication, indexController.activity);
 router.get("/topmost/{:period}", indexController.topmost);
